ci: Configure base directory for unit tests

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -134,6 +134,8 @@ jobs:
               }
 
           def extract_from_cs():
+              base_dir = "./BlindTreaure.UnitTest"
+
               # Scan test source files; add more patterns if needed
               patterns = ["./**/*Tests.cs", "./**/*Test.cs"]
               files = set()
